--- a/src/sass/shoppingCart.scss
+++ b/src/sass/shoppingCart.scss
@@ -138,7 +138,7 @@
         }
       }
       p {
-        width: 500px;
+        width: 600px;
         float: right;
         text-align: right;
         padding-right: 20px;
@@ -289,17 +289,17 @@
         margin: 0 auto;
         overflow: hidden;
         ul {
-          width: 1920px;
+          width: 5000px;
           overflow: hidden;
           @include transform(translateX(0));
           @include transition(all .5s ease);
-          &.toRight {
-            @include transform(translateX(-$ul-width));
-          }
           li {
             width: $li-width;
             margin-right: 30px;
             float: left;
+            &:nth-of-type(4n){
+              margin-right: 0; 
+            }
             .goodsImg {
               position: relative;
               width: $li-width;
